--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,13 +1,13 @@
-$font-stack: "Open Sans", "Arial", sans-serif;
+$font-stack: "Raleway", "Arial", sans-serif;
 $black: #000000;
 $blue-font: #00203a;
 $blue: #182c3d;
 $white: #ffffff;
 $orange-font: #f0ba82;
+$grey-font: #5e5e5e;
 $orange: #ee9c57;
 $tablet: 768px;
 $desktop: 1150px;
 $mobil: 767px;
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
-
