--- a/source/sass/blocks/service.scss
+++ b/source/sass/blocks/service.scss
@@ -1,6 +1,16 @@
 .service {
     width: 293px;
     margin: 0 auto;
+    &__wrap-block {
+      position: relative;
+      margin-top: 10px;
+      width: 100%;
+    }
+    &__block {
+      position: absolute;
+      opacity: 0;
+      transition: opacity 1s;
+    }
     &__title {
       font-family: "Playfair Display";
       @include font(45px,45px,700);
@@ -20,14 +30,14 @@
       padding: 22px 0;
       @include font(22px,22px,300);
       color: rgba(0, 32, 58, 0.5);
-      &--active {
-        color: $blue-font;
-        font-weight: 700;
-      }
     }
     &__item {
       padding: 22px 0;
       font-weight: 700;
+        &--active .service__link {
+          color: $blue-font;
+          font-weight: 700;
+        }
     }
     &__text {
       @include font(20px,30px,300);
@@ -41,6 +51,7 @@
       background: 0 0;
       display: block;
       margin: 0 auto;
+      margin-top: 660px;
       background-color: $white;
       border: 2px solid $black;
       color: $blue-font;
@@ -49,9 +60,6 @@
       width: 217px;
       padding: 24px 0;
       letter-spacing: 1px;
-    }
-    &__block {
-      display: none;
     }
     &__span {
       display: none;
@@ -63,6 +71,9 @@
     width: 695px;
     border-right: 1px solid #f1efe9;
     border-left: 1px solid #f1efe9;
+    &__wrap-block {
+      margin-top: 30px;
+    }
   &__list {
     flex-direction: row;
     flex-wrap: wrap;
@@ -79,11 +90,12 @@
     font-size: 18px;
   }
   &__item {
-    width: 50%;
+    width: 45%;
     text-align: left;
   }
   &__consultation {
     position: relative;
+    margin-top: 640px;
   }
   &__button {
     margin: 0;
@@ -95,7 +107,7 @@
     display: block;
     font-size: 22px;
     right: 5px;
-    top: -190px;
+    top: -215px;
   }
 }
  }
@@ -106,6 +118,9 @@
     &__wrap {
       display: flex;
     }
+    &__wrap-block {
+      margin-top: 20px;
+    }
     &__list {
       width: 289px;
       flex-direction: column;
@@ -114,8 +129,11 @@
     &__item {
       width: 197px;
       padding-bottom: 26px;
+      margin-left: 0px;
+      transition: margin-left 1s;
       &--active {
         margin-left: 30px;
+        transition: margin-left 1s;
       }
     }
     &__link {
@@ -123,6 +141,7 @@
       &:hover {
         color: rgba(0,32,58,.8);
         font-weight: 700;
+        transition: all 0.7s;
       }
     }
     &__span {
@@ -131,16 +150,20 @@
     &__consultation {
       width: 217px;
       margin-left: auto;
-      margin-top: -90px;
+      margin-top: 20px;
     }
     &__button {
       width: 217px;
       font-size: 15px;
       cursor: pointer;
       &:hover {
-      background-color: rgba(0,0,0,.9);
+      background-color: rgba(248,162,90,1);
       color: $white;
-      transition: all 0.7s;
+      transition: all 0.6s;
+      border-color: $white;
+      }
+      &:active {
+      background-color: rgba(248,162,90,.6);
       }
     }
   }
