--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -83,9 +83,9 @@
       }
     &__wrap {
       height: 600px;
-      background: url(..//img/video-desktop@1x.jpg) no-repeat top center;
+      background: url(../img/video-desktop@1x.jpg) no-repeat top center;
       @media (min-resolution: $retina-dpi), (max-resolution: $retina-dppx) {
-      background: url(..//img/video-desktop@2x.jpg) no-repeat top center;
+      background: url(../img/video-desktop@2x.jpg) no-repeat top center;
       background-size: cover;
     }
     background-size: cover;
@@ -93,10 +93,14 @@
     &__button {
       width: 87px;
       height: 87px;
-      &:hover {
-      width: 95px;
-      height: 95px;
-      }
+        &:hover {
+        width: 95px;
+        height: 95px;
+        }
+        &:active {
+          width: 77px;
+          height: 77px;
+        }
     }
     &__text {
       width: 460px;
