--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -55,7 +55,7 @@ body {
   }
   line-height: 25px;
   color: $black;
-  background-color: $white;
+  background-color: #fdfaf3;
 }
 
 html {
@@ -98,9 +98,8 @@ button {
   outline: 0;
 }
 .show {
+  opacity: 1 !important;
+  transition: opacity 1s;
   display: block !important;
 }
 
-.show-flex {
-  display: flex !important;
-}
