--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 @import "mixins.scss";
 @import "variables.scss";
 @import "scaffolding.scss";
+@import "blocks/button-top.scss";
 
 //Header
 @import "blocks/main-header.scss";
