--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1327,10 +1327,88 @@ button {
     .contacts {
       background: url(../img/kitchen-tablet@2x.jpg) no-repeat top center;
       background-size: cover; } }
+  .contacts__container {
+  -webkit-perspective: 1200;
+    perspective: 1200;
+    -moz-transform: perspective(1200px);
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    position: relative;
+  }
   .contacts__request {
     width: 293px;
+    height: 760px;
     margin: 0 auto;
+    transform-style: preserve-3d;
+    transition: .7s linear;
     padding-top: 70px; }
+    .contacts__wrap-form {
+    z-index: 2;
+    transform: rotateY(0deg);
+    padding-top: 70px;
+  }
+  .contacts__wrap-form, .contacts__form-result {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+  }
+  .contacts__text--result {
+  width: 100%;
+  font-size: 18px;
+  line-height: 24px;
+  }
+  .contacts__form-close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  }
+
+.contacts__form-close::before,
+.contacts__form-close::after {
+  position: absolute;
+    content: "";
+    left: 0;
+    width: 30px;
+    height: 2px;
+    background-color: #fff;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+  .contacts__form-result {
+    transform: rotateY(-180deg);
+    color: white;
+  }
+  .contacts__caption span {
+  text-transform: capitalize;
+  }
+  .contacts__wrap-text em{
+    color: #fff;
+  }
+  .contacts__caption {
+  width: 100%;
+  margin-top: 0;
+  text-align: center;
+  line-height: 24px;
+ }
+ .contacts__wrap-text {
+    border: 4px solid rgba(255,255,255,0.3);
+    margin: 0 auto;
+    margin-top: 30%;
+    padding: 30px 20px 20px;
+  }
+  .contacts__form-close::after {
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
   .contacts__image {
     display: none; }
   .contacts__title {
@@ -1341,28 +1419,28 @@ button {
     text-align: center;
     color: #ffffff; }
   .contacts__text {
-    font-size: 18px;
+    font-size: 14px;
     color: rgba(255, 255, 255, 0.8);
     letter-spacing: 1px;
     text-align: center; }
-  .contacts input[type=text] {
+  .contacts input {
     width: 100%;
     padding-bottom: 8px;
-    margin-bottom: 44px;
+    margin-bottom: 34px;
     background-color: transparent;
     color: rgba(255, 255, 255, 0.8);
     border: 0;
     outline: 0;
     border-bottom: 2px solid #bcafa5; }
-    .contacts input[type=text]::-webkit-input-placeholder {
+    .contacts input::-webkit-input-placeholder {
       color: rgba(255, 255, 255, 0.8); }
-    .contacts input[type=text]:focus::-webkit-input-placeholder {
+    .contacts input:focus::-webkit-input-placeholder {
       color: transparent; }
-    .contacts input[type=text] :focus::-moz-placeholder {
+    .contacts input :focus::-moz-placeholder {
       color: transparent; }
-    .contacts input[type=text] :focus:-moz-placeholder {
+    .contacts input :focus:-moz-placeholder {
       color: transparent; }
-    .contacts input[type=text] :focus:-ms-input-placeholder {
+    .contacts input :focus:-ms-input-placeholder {
       color: transparent; }
   .contacts__group {
     border: 0; }
@@ -1393,15 +1471,20 @@ button {
 
 @media (min-width: 768px) {
   .contacts__request {
-    width: 570px; }
+    width: 570px;
+    height: 670px; }
   .contacts__form {
     position: relative;
     padding-top: 50px;
     width: 460px;
     margin: 0 auto; }
+  .contacts input {
+    margin-bottom: 44px;}
   .contacts__button {
     width: 435px;
     font-size: 18px; }
+  .contacts__text {
+    font-size: 18px;}
   .contacts__image {
     position: absolute;
     display: block;
@@ -1553,6 +1636,7 @@ button {
     display: block;
     width: 25px;
     height: 10px;
+    padding-bottom: 15px;
     cursor: pointer;
     border-top: 3px solid #cdd3cf;
     z-index: 5; }
@@ -1809,6 +1893,10 @@ button {
         background: url(../img/video-desktop@2x.jpg) no-repeat top center;
         background-size: cover; } }
 
+.target {
+    transform: rotateY(180deg);
+}
+
 @media (min-width: 1150px) {
     .video__button {
       width: 87px;
@@ -1821,4 +1909,39 @@ button {
         height: 77px; }
     .video__text {
       width: 460px;
-      font-size: 18px; } }
+      font-size: 18px; } 
+/* Анимация формы */
+
+
+.contacts__container {
+  width: 50%;
+}
+
+.contacts__request {
+    position: relative;
+    height: 671px;
+    padding: 0 75px;
+    margin: 0;
+    width: 100%;
+    background-color: rgba(0,0,0,0.3);
+}
+
+.contacts__form, .contacts__button,
+.contacts__title, .contacts__text {
+  width: 424px;
+  margin: 0 auto;
+}
+
+
+.contacts__wrap-text {
+    width: 400px;
+    border: 4px solid rgba(255,255,255,0.3);
+    margin: 0 auto;
+    margin-top: 30%;
+    padding: 30px 20px 20px;
+}
+
+.contacts__caption {
+  line-height: 41px;
+}
+}
